🐛 navbar visible + height fix

--- a/styles/mobile.css
+++ b/styles/mobile.css
@@ -1,6 +1,9 @@
 @media (max-width:960px){
+    html, body {margin: 0; height: 100%; overflow: hidden;}
+
     nav{
-        top:calc(100vh - 6rem);
+        top:unset;
+        bottom:0;
         left:0;
         height:6rem;
         width:100vw;
@@ -12,13 +15,15 @@
         gap:0;
     }
     .nav_item{
+        height:6rem;
         flex-wrap: wrap;
         justify-content:center;
         align-items:center;
+        align-content:center;
     }
     .break{
         flex-basis: 100%;
-        height: .3rem;
+        height: 0.3rem;
     }
     .nav_item i{
         font-size: 2rem;
