--- a/styles/style.css
+++ b/styles/style.css
@@ -10,7 +10,8 @@
 }
 
 body{
-
+    height: 100vh;
+    width: 100vw;
 }
 
 
